tests/NormalTests/paczka1/fuzzy1/17640755.err
Error in line 4: gzXzs AC54 1C,3
Error in line 3: UwRb S96 83,0
Error in line 18: pzv A171 48,4
Error in line 20: pzv A137 33,4
Error in line 19: gzXzs A171 26,7
Error in line 31: rpWY0uVa A954 20,3
Error in line 35: gzXzs S96 92,2
